fixed alignment in gallery and added javascript on book now button

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-body {
-  background-color: black;
+body { background-color:black;
+   background-image: url(background-image.jpg);
   overflow-x:hidden
 }
 .header {
-  background-color: rgb(209, 180, 15);
-  color: black;
+  background-color: rgba(185, 136, 0, 0.5);
+  color: white;
   display: flex;
   justify-content: space-between;
 }
@@ -24,15 +24,15 @@ p {
   justify-content: center;
 }
 .photoFrame {
-  border: groove 10px gold;
+  border: groove 10px rgb(185, 136, 0);
   padding:10px;
   background-color:white
 }
 .list-group {
     width:100%;
 }
-.galleryContainer {width:90%;}
-.galleryContainer img{width:350px; margin:20px;}
+
+.container img{width:300px; margin:20px;}
 .testamonyPictures img{width:90%;
 margin-top:10px;
 }
